# PubTables-1M-To-HTML

./: .gitignore  LICENSE  README.md  extract.py  main.py  pyproject.toml
.github/workflows/: tests.yml  tests_and_cov.yml
tests/: test_extract.py
